--- a/src/app/myaccount/wishlist/wishlist.component.html
+++ b/src/app/myaccount/wishlist/wishlist.component.html
@@ -1,8 +1,8 @@
-<div class="container margin_30">
+<div class="maf-container margin_30">
 
 
 
-<div class="page_header">
+<div class="page_header" [ngClass]="{'rtl': is_rtl}">
     <!-- <div class="breadcrumbs">
         <ul>
             <li><a href="#">Home</a></li>
@@ -15,8 +15,8 @@
 
 
   <!-- /container -->
-  <div class="container">
-    <div class="row m-3 ">
+  <div class="">
+    <div class="row" [ngClass]="{'rtl': is_rtl}">
       <div class="col-lg-2">
         <div class="product-item" style="width: 210px;">
           <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
