--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,6 @@
 <main class="bg_gray">
-    <div class="container margin_30">
-    <div class="page_header">
+    <div class="maf-container margin_30">
+    <div class="page_header" [ngClass]="{'rtl': is_rtl}">
         <!-- <div class="breadcrumbs">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -13,8 +13,8 @@
 
   
       <!-- /container -->
-      <div class="container">
-        <div class="row mb-3">
+      <div class="">
+        <div class="row m-1" [ngClass]="{'rtl': is_rtl}">
             <div class="m-1">
               <div class="product-item" style="width: 205px;">
                 <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
@@ -120,7 +120,7 @@
 
       
     <!-- /page_header -->
-    <table class="table table-striped cart-list">
+    <table class="table table-striped cart-list" [ngClass]="{'table-rtl': is_rtl}">
                         <thead>
                             <tr>
                                 <th translate="cart.product">
@@ -192,7 +192,7 @@
                         <div class="col-sm-8">
                         <div class="apply-coupon">
                             <div class="form-group form-inline">
-                                <input type="text" name="coupon-code" value="" placeholder="Promo code" class="form-control"><button type="button" class="btn_1 outline" translate="cart.apply"></button>
+                                <input type="text" name="coupon-code" value="" [placeholder]="'cart.code' | translate" class="form-control"><button type="button" class="btn_1 outline" translate="cart.apply"></button>
                             </div>
                         </div>
                     </div>
