--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="revealed">
-    <div class="container">
+    <div class="maf-container">
       <div class="row">
         <div class="col-lg-3 col-md-6">
-          <h3 data-target="#collapse_1" translate="home.quick_links">Quick Links</h3>
+          <h3 data-target="#collapse_1" translate="home.quick_links"></h3>
           <div class="collapse dont-collapse-sm links" id="collapse_1">
             <ul>
               <li><a href="/about" translate="home.about"></a></li>
