--- a/src/app/homepage/slider/slider.component.html
+++ b/src/app/homepage/slider/slider.component.html
@@ -1,67 +1,70 @@
-<div class="container">
-  
- <ngb-carousel>
-    <ng-template ngbSlide>
-      <div class="picsum-img-wrapper">
-        <img src="assets/img/slides/slider-image-1.jpg" alt="Random first slide">
-      </div>
-      <div class="owl-slide cover" >
-        <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
-          <div class="container">
-          <div class="row">
-            <div class="col-lg-12 static">
-            <div class="slide-text white" [ngClass]="{'rtl': is_rtl}">
-              <h2 class="owl-slide-animated owl-slide-title" translate="home.fresh_fruits"> </h2>
-              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="maf-container">
+      <ngb-carousel>
+        <ng-template ngbSlide>
+          <div class="picsum-img-wrapper">
+            <img src="assets/img/slides/slider-image-1.jpg" alt="Random first slide">
+          </div>
+          <div class="owl-slide cover" >
+            <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+              <div class="container">
+              <div class="row">
+                <div class="col-lg-12 static">
+                <div class="slide-text white" [ngClass]="{'rtl': is_rtl}">
+                  <h2 class="owl-slide-animated owl-slide-title" translate="home.fresh_fruits"> </h2>
+                  <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
+                </div>
+                </div>
+              </div>
+              </div>
             </div>
             </div>
+        </ng-template>
+        <ng-template ngbSlide>
+          <div class="picsum-img-wrapper">
+            <img src="assets/img/slides/slider-image-2.jpg" alt="Random second slide">
           </div>
-          </div>
-        </div>
-        </div>
-    </ng-template>
-    <ng-template ngbSlide>
-      <div class="picsum-img-wrapper">
-        <img src="assets/img/slides/slider-image-2.jpg" alt="Random second slide">
-      </div>
-      <div class="owl-slide cover" style="background-image: url(/assets/img/slides/slider-image-2.jpg);">
-        <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
-          <div class="container">
-          <div class="row">
-            <div class="col-lg-12 static">
-            <div class="slide-text white" [ngClass]="{'rtl': is_rtl}">
-              <h2 class="owl-slide-animated owl-slide-title" translate="home.vegetables"> </h2>
-           
-              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
+          <div class="owl-slide cover" style="background-image: url(/assets/img/slides/slider-image-2.jpg);">
+            <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+              <div class="container">
+              <div class="row">
+                <div class="col-lg-12 static">
+                <div class="slide-text white" [ngClass]="{'rtl': is_rtl}">
+                  <h2 class="owl-slide-animated owl-slide-title" translate="home.vegetables"> </h2>
+               
+                  <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
+                </div>
+                </div>
+              </div>
+              </div>
             </div>
             </div>
+          <div class="carousel-caption">
           </div>
+        </ng-template>
+        <ng-template ngbSlide>
+          <div class="picsum-img-wrapper">
+            <img src="assets/img/slides/slider-image-3.jpg" alt="Random third slide">
           </div>
-        </div>
-        </div>
-      <div class="carousel-caption">
-      </div>
-    </ng-template>
-    <ng-template ngbSlide>
-      <div class="picsum-img-wrapper">
-        <img src="assets/img/slides/slider-image-3.jpg" alt="Random third slide">
-      </div>
-      <div class="owl-slide cover" style="background-image: url(/assets/img/slides/slider-image-1.jpg);">
-        <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(255, 255, 255, 0.5)">
-          <div class="container">
-          <div class="row">
-            <div class="col-lg-12 static">
-            <div class="slide-text white" [ngClass]="{'rtl': is_rtl}">
-              <h2 class="owl-slide-animated owl-slide-title" translate="home.grocery"></h2>
-              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
+          <div class="owl-slide cover" style="background-image: url(/assets/img/slides/slider-image-1.jpg);">
+            <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(255, 255, 255, 0.5)">
+              <div class="container">
+              <div class="row">
+                <div class="col-lg-12 static">
+                <div class="slide-text white" [ngClass]="{'rtl': is_rtl}">
+                  <h2 class="owl-slide-animated owl-slide-title" translate="home.grocery"></h2>
+                  <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
+                </div>
+                </div>
+              </div>
+              </div>
             </div>
             </div>
+          <div class="carousel-caption"> 
           </div>
-          </div>
-        </div>
-        </div>
-      <div class="carousel-caption"> 
-      </div>
-    </ng-template>
-  </ngb-carousel>
+        </ng-template>
+      </ngb-carousel>
+    </div>
+  </div>
 </div>
