--- a/src/app/topheader/topheader.component.scss
+++ b/src/app/topheader/topheader.component.scss
@@ -288,27 +288,26 @@ $small-mobile: 'only screen and (max-width: 479px)';
     position: fixed;
     z-index: 99;
     width: 100%;
-    margin-left: 100px;
     top: 0;
-    background: rgba(255, 255, 255, .9);
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.11);
-    -webkit-animation-name: fadeInDown;
-    animation-name: fadeInDown;
-    -webkit-animation-duration: 900ms;
-    animation-duration: 900ms;
-    -webkit-animation-timing-function: cubic-bezier(0.2, 1, 0.22, 1);
-    animation-timing-function: cubic-bezier(0.2, 1, 0.22, 1);
-    -webkit-animation-delay: 0s;
-    animation-delay: 0s;
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
-    -webkit-animation-direction: normal;
-    animation-direction: normal;
-    -webkit-animation-fill-mode: none;
-    animation-fill-mode: none;
-    -webkit-animation-play-state: running;
-    animation-play-state: running;
-    border-bottom: 0;
+    background: rgba(255, 255, 255, .95);
+    // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.11);
+    // -webkit-animation-name: fadeInDown;
+    // animation-name: fadeInDown;
+    // -webkit-animation-duration: 900ms;
+    // animation-duration: 900ms;
+    // -webkit-animation-timing-function: cubic-bezier(0.2, 1, 0.22, 1);
+    // animation-timing-function: cubic-bezier(0.2, 1, 0.22, 1);
+    // -webkit-animation-delay: 0s;
+    // animation-delay: 0s;
+    // -webkit-animation-iteration-count: 1;
+    // animation-iteration-count: 1;
+    // -webkit-animation-direction: normal;
+    // animation-direction: normal;
+    // -webkit-animation-fill-mode: none;
+    // animation-fill-mode: none;
+    // -webkit-animation-play-state: running;
+    // animation-play-state: running;
+    // border-bottom: 0;
     display: block;
     @media #{$tablet-device} {
         position: inherit;
@@ -1261,6 +1260,7 @@ $small-mobile: 'only screen and (max-width: 479px)';
     width: 100%;
     top: 100%;
     z-index: 9;
+    font-family: Janna LT;
     display: none;
     padding: 10px 0;
     box-shadow: 0px 0px 5.76px 0.24px rgba(0, 0, 0, 0.1);
