--- a/src/assets/css/listing.css
+++ b/src/assets/css/listing.css
@@ -347,6 +347,7 @@
 .filter_col {
   border: 1px solid #ededed;
   padding: 15px;
+  text-align: left;
   margin-bottom: 25px;
 }
 @media (max-width: 991px) {
