--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="revealed">
     <div class="maf-container">
-      <div class="row">
+      <div class="row" [ngClass]="{'rtl': is_rtl}">
         <div class="col-lg-3 col-md-6">
           <h3 data-target="#collapse_1" translate="home.quick_links"></h3>
           <div class="collapse dont-collapse-sm links" id="collapse_1">
@@ -42,17 +42,17 @@
           <div class="collapse dont-collapse-sm" id="collapse_4">
             <div id="newsletter">
                 <div class="form-group">
-                    <input type="email" name="email_newsletter" id="email_newsletter" class="form-control" placeholder="Your email">
+                    <input type="email" name="email_newsletter" id="email_newsletter" class="form-control" [placeholder]="'auth.email' | translate">
                     <button type="submit" id="submit-newsletter"><i class="ti-angle-double-right"></i></button>
                 </div>
             </div>
             <div class="follow_us">
               <h5 translate="home.follow_us"></h5>
               <ul>
-                <li><a href="#0"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/twitter_icon.svg" alt="" class="lazy"></a></li>
-                <li><a href="#0"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/facebook_icon.svg" alt="" class="lazy"></a></li>
-                <li><a href="#0"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/instagram_icon.svg" alt="" class="lazy"></a></li>
-                <li><a href="#0"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/youtube_icon.svg" alt="" class="lazy"></a></li>
+                <li><a href="#0"><img src="assets/img/twitter_icon.svg" data-src="assets/img/twitter_icon.svg" alt="" class="lazy"></a></li>
+                <li><a href="#0"><img src="assets/img/facebook_icon.svg" data-src="assets/img/facebook_icon.svg" alt="" class="lazy"></a></li>
+                <!-- <li><a href="#0"><img src="assets/img/instagram_icon.svg" data-src="assets/img/instagram_icon.svg" alt="" class="lazy"></a></li> -->
+                <li><a href="#0"><img src="assets/img/youtube_icon.svg" data-src="assets/img/youtube_icon.svg" alt="" class="lazy"></a></li>
               </ul>
             </div>
           </div>
@@ -65,9 +65,9 @@
           <ul class="footer-selector clearfix">
             <li>
               <div class="styled-select lang-selector">
-                <select>
-                  <option value="English" selected>English</option>
-                  <option value="French">العربية</option>
+                <select (change)="changeLangage($event.target.value)">
+                  <option value="en" selected>English</option>
+                  <option value="ar">العربية</option>
                 </select>
               </div>
             </li>
