--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,3 +1,10 @@
 .item{
     width: 100%;
 }
+.is_rtl_text{
+    direction: rtl;
+    text-align: start;
+}
+.breadcrumbs ul li:after{
+    content: "\e64a";
+}
